--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "constants": "^0.0.2",
+    "csv-parse": "^5.2.0",    
+    "fs-extra": "^10.1.0",
+    "moment": "^2.29.3",
+    "papaparse": "^5.3.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -19,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.5",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
