--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "30-friends-admin",
   "version": "0.1.0",
   "private": true,
+  
+  "homepage": "https://Munibulhassan.github.io/30-friends-adminpanel",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -12,8 +14,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "constants": "^0.0.2",
-    "csv-parse": "^5.2.0",    
+    "csv-parse": "^5.2.0",
     "fs-extra": "^10.1.0",
+    "gh-pages": "^4.0.0",
     "moment": "^2.29.3",
     "papaparse": "^5.3.2",
     "path": "^0.12.7",
