--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "30-friends-admin",
   "version": "0.1.0",
   "private": true,
-  
   "homepage": "https://Munibulhassan.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -10,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "amazon-chime-sdk-component-library-react": "^3.2.0",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -38,8 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
-
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -64,5 +63,4 @@
     "path": false,
     "os": false
   }
-  
 }
